buildscript {
    configurations.classpath {
        resolutionStrategy.activateDependencyLocking()
    }
}

plugins {
    id 'io.spring.dependency-management' version '1.0.7.RELEASE' apply false
}

allprojects {
    dependencyLocking {
        lockAllConfigurations()
    }
}

subprojects {
    apply plugin: 'idea'
    apply plugin: 'java'

    group 'io.netifi.proteus.httpgateway'
    version '1.6.0-RC'
    apply from: '../dependency-management.gradle'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    repositories {
        repositories {
            jcenter()
            maven {
                url = 'https://artifactory.netifiinc.com/artifactory/libs-snapshot-local'
                credentials {
                    username = project.hasProperty('netifiArtifactoryUsername') ? project.property('netifiArtifactoryUsername') : System.getenv('NETIFI_ARTIFACTORY_USERNAME')
                    password = project.hasProperty('netifiArtifactoryPassword') ? project.property('netifiArtifactoryPassword') : System.getenv('NETIFI_ARTIFACTORY_PASSWORD')
                }
            }
            maven {
                url = 'https://artifactory.netifiinc.com/artifactory/libs-release-local'
                credentials {
                    username = project.hasProperty('netifiArtifactoryUsername') ? project.property('netifiArtifactoryUsername') : System.getenv('NETIFI_ARTIFACTORY_USERNAME')
                    password = project.hasProperty('netifiArtifactoryPassword') ? project.property('netifiArtifactoryPassword') : System.getenv('NETIFI_ARTIFACTORY_PASSWORD')
                }
            }
        }
    }
}